Fix margins, alignment

--- a/twd-account-overview.css
+++ b/twd-account-overview.css
@@ -52,6 +52,7 @@ h3{
 #registration .container .content button {
   font-family: "Nunito",sans-serif;
   margin-top: 30px;
+  margin-bottom: 0px;
   width: 200px;
   border-radius: 2px;
   border: transparent;
@@ -122,7 +123,9 @@ img.icon {
     color: #333;
   }
 
-.login p {
+.login {
+  margin-top:0px;
+  text-align:center;
   color:white !important;
 }
 
